fix fluent menu demo for z-index

--- a/docs/css/less/docs.less
+++ b/docs/css/less/docs.less
@@ -68,7 +68,7 @@ header {
 header {
     height: 45px;
     position: relative;
-    z-index: 1;
+    //z-index: 1;
 }
 
 .introduce {
